--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy==1.18.2
-pandas==1.1.5
-plotly==5.1.0
-altair
-scipy
-streamlit
-setuptools
+librosa==0.8.1 
+numpy==1.19.5
+pandas==1.3.1
+pickleshare==0.7.5
+scipy==1.7.1
+streamlit==0.86.0
+tensorflow==2.5.0
