--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+streamlit==0.86.0
 librosa==0.8.1 
 numpy==1.19.5
 pandas==1.3.1
 pickleshare==0.7.5
-scipy==1.7.1
-streamlit==0.86.0
 tensorflow==2.5.0
+wavio==0.0.4
+sounddevice==0.4.2
+SoundFile==0.10.3.post1
